<resources>
    <string name="app_name">RecyclingApp</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_fragment">Login Fragment</string>
    <string name="welcome">Welcome!</string>
    <string name="login_details_pls">Please enter your login details.</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="username">username</string>
    <string name="navigation_drawer_open">open nav drawer\n</string>
    <string name="navigation_drawer_close">close nav drawer\n</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="history">History</string>
    <string name="statistic">Statistic</string>
    <string name="logout">Logout</string>
    <string name="back_btn">Back</string>
    <string name="search_query_hint">eg. shoe and #Nike and @leather</string>
    <string name="no_search_results">No items found for this search!</string>
    <string name="chats">Chats</string>
    <string name="chats_text">Chats</string>
    <string name="signup_btn">Create new account</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="register_btn">Register</string>
    <string name="account">Account</string>
    <string name="map_api">AIzaSyBvu-hQWw85OHTl-UfU2j4a4AwXbp5V8aw</string>
    <string name="map">Map</string>
    <string name="upload_btn">Upload Image</string>
    <string name="select_btn">Select Image</string>
    <string name="viewing_txt">You are viewing user profile</string>
</resources>