<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:title="@string/home"
            android:icon="@drawable/baseline_android_30"
            android:id="@+id/home"/>
        <item android:title="@string/login"
            android:icon="@drawable/baseline_android_30"
            android:id="@+id/register_button"/>
        <item android:title="@string/chats"
            android:icon="@drawable/baseline_android_30"
            android:id="@+id/chats"/>
        <item android:title="@string/cart"
            android:icon="@drawable/baseline_android_30"
            android:id="@+id/cart"/>
        <item android:title="@string/history"
            android:icon="@drawable/baseline_android_30"
            android:id="@+id/record"/>
        <item android:title="@string/statistic"
            android:icon="@drawable/baseline_android_30"
            android:id="@+id/statistic"/>
    </group>

</menu>