<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#E1F5FE">

            <!-- Your contents -->

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="28dp"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/recycling_login_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_cabin_64" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/app_name"
                    android:textSize="32sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/login_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:orientation="vertical"
                android:padding="28dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                app:layout_constraintVertical_bias="1.0"
                tools:layout_editor_absoluteX="0dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome"
                    android:textSize="32sp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0.7"
                    android:text="@string/login_details_pls" />

                <View
                    android:id="@+id/view2"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email_address" />

                <EditText
                    android:id="@+id/editTextTextEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:inputType="textEmailAddress" />

                <View
                    android:id="@+id/view3"
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password" />

                <EditText
                    android:id="@+id/editTextTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:inputType="textPassword" />

                <View
                    android:id="@+id/view4"
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/login" />

                <Button
                    android:id="@+id/signup_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_btn" />

            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="181dp"
                android:layout_marginEnd="182dp"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/login_fragment"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                app:layout_constraintVertical_bias="0.491" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>